# movement-particles

./: .gitignore  BUILD_SUCCESS.md  Cargo.toml  GETTING_STARTED.md  NEXT_STEPS.md  PROJECT_STATUS.md  README.md  TROUBLESHOOTING.md  build.sh
.cargo/: config.toml
crates/particle-core/: Cargo.toml
crates/particle-core/examples/: native_test.rs
crates/particle-core/src/: collision.rs  lib.rs  particles.rs  physics.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs  particle_renderer.rs
crates/renderer/src/shaders/: particle.wgsl
crates/wasm-bridge/: Cargo.toml
crates/wasm-bridge/src/: lib.rs
docs/: COMPUTER_VISION.md  PARTICLES.md
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: main.ts
web/src/cv/: index.ts
web/src/ui/: index.ts
