[workspace]
resolver = "2"
members = [
    "crates/particle-core",
    "crates/renderer",
    "crates/wasm-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["micha"]
license = "MIT"

[workspace.dependencies]
# Math and utilities
glam = "*"
rand = "0.8"
bytemuck = { version = "*", features = ["derive"] }
getrandom = { version = "*", features = ["js"] }

# Graphics
wgpu = "27.0.1"
winit = "*"

# WASM
wasm-bindgen = "*"
web-sys = "*"
js-sys = "*"
console_error_panic_hook = "*"
wasm-bindgen-futures = "*"

# Async
pollster = "*"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-wasm]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1

